--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <!-- /responsive nav button -->
 
                     <a class="navbar-brand" href="index.html" style="font-weight: bold; font-size: 22px; padding: 15px 15px; display: flex; align-items: center;">
-                        <img src="images/LOGO2.png" alt="Logo" style="height: 30px; margin-right: 10px;">
+                        <img src="LOGO2.png" alt="Logo" style="height: 30px; margin-right: 10px;">
                         </a>
                     
                 </div>
@@ -151,7 +151,7 @@ About Section Start
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="images/websatu.png" alt="">
+                    <img src="websatu.png" alt="">
                 </div>
             </div>
         </div>
@@ -175,10 +175,10 @@ Portfolio Section Start
             <div class="col-sm-4 col-xs-12">
                 <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
                     <div class="img-wrapper">
-                        <img src="images/portfolio/gambar10.png" class="img-responsive" alt="this is a title" >
+                        <img src="gambar10.png" class="img-responsive" alt="this is a title" >
                         <div class="overlay">
                             <div class="buttons">
-                                <a rel="gallery" class="fancybox" href="images/portfolio/gambar10.png">Demo</a>
+                                <a rel="gallery" class="fancybox" href="gambar10.png">Demo</a>
                                 <a target="_blank" href="sadari.html">Details</a>
                             </div>
                         </div>
@@ -198,7 +198,7 @@ Portfolio Section Start
             <div class="col-sm-4 col-xs-12">
                 <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
                     <div class="img-wrapper">
-                        <img src="images/portfolio/gambar8.png" class="img-responsive" alt="this is a title" >
+                        <img src="gambar8.png" class="img-responsive" alt="this is a title" >
                         <div class="overlay">
                             <div class="buttons">
                                 <a rel="gallery" class="fancybox" href="images/portfolio/gambar8.png">Demo</a>
@@ -222,10 +222,10 @@ Portfolio Section Start
             <div class="col-sm-4 col-xs-12">
                 <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
                     <div class="img-wrapper">
-                        <img src="images/portfolio/gambar7.png" class="img-responsive" alt="" >
+                        <img src="gambar7.png" class="img-responsive" alt="" >
                         <div class="overlay">
                             <div class="buttons">
-                                <a rel="gallery" class="fancybox" href="images/portfolio/gambar7.png">Demo</a>
+                                <a rel="gallery" class="fancybox" href="gambar7.png">Demo</a>
                                 <a target="_blank" href="glowry.html">Details</a>
                             </div>
                         </div>
@@ -246,10 +246,10 @@ Portfolio Section Start
             <div class="col-sm-4 col-xs-12">
                 <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
                     <div class="img-wrapper">
-                        <img src="images/portfolio/gambar6.png" class="img-responsive" alt="" >
+                        <img src="gambar6.png" class="img-responsive" alt="" >
                         <div class="overlay">
                             <div class="buttons">
-                                <a rel="gallery" class="fancybox" href="images/portfolio/gambar6.png">Demo</a>
+                                <a rel="gallery" class="fancybox" href="gambar6.png">Demo</a>
                                 <a target="_blank" href="Plan Plate.html">Details</a>
                             </div>
                         </div>
@@ -270,10 +270,10 @@ Portfolio Section Start
             <div class="col-sm-4 col-xs-12">
                 <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="900ms">
                     <div class="img-wrapper">
-                        <img src="images/portfolio/gambar11.png" class="img-responsive" alt="" >
+                        <img src="gambar11.png" class="img-responsive" alt="" >
                         <div class="overlay">
                             <div class="buttons">
-                                <a rel="gallery" class="fancybox" href="images/portfolio/gambar11.png">Demo</a>
+                                <a rel="gallery" class="fancybox" href="gambar11.png">Demo</a>
                                 <a target="_blank" href="pamflet.html">Details</a>
                             </div>
                         </div>
@@ -294,10 +294,10 @@ Portfolio Section Start
             <div class="col-sm-4 col-xs-12">
                 <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="900ms">
                     <div class="img-wrapper">
-                        <img src="images/portfolio/gambar14.png" class="img-responsive" alt="" >
+                        <img src="gambar14.png" class="img-responsive" alt="" >
                         <div class="overlay">
                             <div class="buttons">
-                                <a rel="gallery" class="fancybox" href="images/portfolio/gambar12.png">Demo</a>
+                                <a rel="gallery" class="fancybox" href="gambar12.png">Demo</a>
                                 <a target="_blank" href="polusi.html">Details</a>
                             </div>
                         </div>
@@ -318,10 +318,10 @@ Portfolio Section Start
              <div class="col-sm-4 col-xs-12">
                 <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
                     <div class="img-wrapper">
-                        <img src="images/portfolio/gambar2.png" class="img-responsive" alt="" >
+                        <img src="gambar2.png" class="img-responsive" alt="" >
                         <div class="overlay">
                             <div class="buttons">
-                                <a rel="gallery" class="fancybox" href="images/portfolio/gambar2.png">Demo</a>
+                                <a rel="gallery" class="fancybox" href="gambar2.png">Demo</a>
                                 <a target="_blank" href="fotografi.html">Details</a>
                             </div>
                         </div>
@@ -342,10 +342,10 @@ Portfolio Section Start
              <div class="col-sm-4 col-xs-12">
                 <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
                     <div class="img-wrapper">
-                        <img src="images/portfolio/gambar1.png" class="img-responsive" alt="" >
+                        <img src="gambar1.png" class="img-responsive" alt="" >
                         <div class="overlay">
                             <div class="buttons">
-                                <a rel="gallery" class="fancybox" href="images/portfolio/gambar1.png">Demo</a>
+                                <a rel="gallery" class="fancybox" href="gambar1.png">Demo</a>
                                 <a target="_blank" href="poster.html">Details</a>
                             </div>
                         </div>
@@ -366,10 +366,10 @@ Portfolio Section Start
             <div class="col-sm-4 col-xs-12">
                 <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="1200ms">
                     <div class="img-wrapper">
-                        <img src="images/portfolio/gambar12.png" class="img-responsive" alt="" >
+                        <img src="gambar12.png" class="img-responsive" alt="" >
                         <div class="overlay">
                             <div class="buttons">
-                                <a rel="gallery" class="fancybox" href="images/portfolio/gambar12.png">Demo</a>
+                                <a rel="gallery" class="fancybox" href="gambar12.png">Demo</a>
                                 <a target="_blank" href="posisi.html">Details</a>
                             </div>
                         </div>
